syntax = "proto3";
package tendermint.dash;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/dash";

message ControlMessage {
  oneof sum {
    ValidatorChallenge         validator_challenge          = 1;
    ValidatorChallengeResponse validator_challenge_response = 2;
  }
}

message ValidatorChallenge {
  bytes  sender_protxhash    = 1;
  bytes  recipient_protxhash = 2;
  string sender_node_id      = 3;
  string recipient_node_id   = 4;
  bytes  token               = 5;
  bytes  signature           = 6;
}

message ValidatorChallengeResponse {
  bytes signature = 1;
}
