syntax = "proto3";
package tendermint.types;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/types";

import "gogoproto/gogo.proto";
import "tendermint/crypto/keys.proto";

message ValidatorSet {
  repeated Validator          validators           = 1;
  Validator                   proposer             = 2;
  int64                       total_voting_power   = 3;
  tendermint.crypto.PublicKey threshold_public_key = 4 [(gogoproto.nullable) = false];
  int32                       quorum_type          = 5;
  bytes                       quorum_hash          = 6;
  bool                        has_public_keys      = 7;
}

message Validator {
  tendermint.crypto.PublicKey pub_key           = 2 [(gogoproto.nullable) = true];
  int64                       voting_power      = 3;
  int64                       proposer_priority = 4;
  bytes                       pro_tx_hash       = 5;
  string                      node_address      = 6;  // address of the Validator, correct URI (RFC 3986)
}

message SimpleValidator {
  tendermint.crypto.PublicKey pub_key      = 1;
  int64                       voting_power = 2;
}
